Tue May 11 22:51:11 2010  Tanaka Akira  <akr@fsij.org>

	* pack.c (pack_pack): call rb_quad_pack to preserve RangeError.

Tue May 11 05:37:19 2010  Tanaka Akira  <akr@fsij.org>

	* pack.c: backport integer pack/unpack from 1.9 for [ruby-core:21937].

	* configure.in: backport RUBY_DEFINT and fixed size integer checks.

	* ruby.h: include stdint.h if available.

	* bignum.c (rb_big_pack): defined..
	  (rb_big_unpack): defined.

	* intern.h (rb_big_pack): declared.
	  (rb_big_unpack): declared.

Mon May 10 15:48:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* regex.c (read_special): get rid of overrun.

Sun May  9 08:07:55 2010  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb: backported exception handling from trunk.
	  [ruby-core:29745]

Sat May  8 11:07:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (VpAlloc): ensure buf does not get
	  collected.  based on a patch masaya tarui at [ruby-dev:41213].

Fri May  7 11:31:50 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* instruby.rb (install-man): install mdocs directly without
	  temporary files.  [ruby-dev:41204]

Fri May  7 09:16:16 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/extconf.rb (get_tclConfig_dirs): glob with EXEEXT.

	* ext/tk/extconf.rb (search_tclConfig): fixed typo.

Fri May  7 06:45:28 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: search directories on PATH, only if containing
	  tclsh or wish command (probably right fix for [ruby-core:30010]).

Thu May  6 12:12:26 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* README: update.

Wed May  5 19:00:01 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: revert. enbugged by last commit.
	  ([ruby-dev:41133], [ruby-dev:41134], [ruby-core:30010])

	* ext/tk/README.tcltklib: ditto.

Tue May  4 10:07:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* version.c (UNALIGNED): get rid of conflict.

Mon May  3 08:15:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
